--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@
 image: oven/bun
 # Functions that should be executed before the build script is run
 before_script:
+  - cd client
   - bun i
 pages:
   script:
