--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "@solid-primitives/i18n": "^2.0.0",
+    "@modular-forms/solid": "^0.23.0",
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
     "eslint": "^9.1.1",
