--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,12 +10,13 @@ publish = false
 [dependencies]
 axum = { version = "0.7" }
 dotenvy = { version = "0.15" }
-serde = { version = "1", features = ["derive"], optional = true }
+lettre = "0.11.9"
+serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
+sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-tower = { version = "0.4", default-features = false, features = ["util"] }
-tower-http = { version = "0.5", default-features = false, features = [
+tower = { version = "0.5", default-features = false, features = ["util"] }
+tower-http = { version = "0.6", default-features = false, features = [
     "compression-br",
     "cors",
     "fs",
