--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,6 +13,7 @@ dotenvy = { version = "0.15" }
 lettre = "0.11.9"
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
+serde_with = { version = "3.11.0", features = ["base64"] }
 sqlx = { version = "0.8.2", features = [
     "runtime-tokio-rustls",
     "postgres",
