--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -22,6 +22,7 @@ sqlx = { version = "0.8.2", features = [
     "runtime-tokio-rustls",
     "postgres",
     "uuid",
+    "macros",
 ] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 tower = { version = "0.5", default-features = false, features = ["util"] }
