--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,6 +10,7 @@ publish = false
 [dependencies]
 axum = { version = "0.7" }
 axum-extra = { version = "0.9.4", features = ["typed-header"] }
+base64 = "0.22.1"
 chrono = { version = "0.4.38", features = ["serde", "clock"] }
 dotenvy = { version = "0.15" }
 jsonwebtoken = "9.3.0"
@@ -17,7 +18,6 @@ lettre = "0.11.9"
 rand = "0.8.5"
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
-serde_with = { version = "3.11.0", features = ["base64"] }
 sqlx = { version = "0.8.2", features = [
     "runtime-tokio-rustls",
     "postgres",
