--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -34,6 +34,11 @@ tower-http = { version = "0.6", default-features = false, features = [
 ] }
 tracing = { version = "0.1", default-features = false, features = ["std"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+ts-rs = { version = "10.0.0", features = [
+    "uuid-impl",
+    "no-serde-warnings",
+    "format",
+] }
 uuid = { version = "1.10.0", features = ["v4", "serde"] }
 
 [profile.release]
