--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,19 @@
     "tsc:watch": "tsc --noEmit --watch"
   },
   "dependencies": {
-    "@types/bun": "^1.1.10",
+    "@modular-forms/solid": "^0.24.1",
+    "@solid-primitives/event-listener": "^2.3.3",
+    "@solid-primitives/i18n": "^2.1.1",
+    "@solid-primitives/utils": "^6.2.3",
     "@solidjs/router": "^0.14.7",
+    "@types/bun": "^1.1.10",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
-    "@solid-primitives/i18n": "^2.1.1",
-    "@modular-forms/solid": "^0.24.1",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "eslint": "^9.12.0",
+    "phosphor-solid-js": "2.0.0",
     "postcss": "^8.4.47",
     "postcss-load-config": "^6.0.1",
     "prettier": "^3.3.3",
