--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
+argon2 = "0.5.3"
 axum = { version = "0.7" }
 axum-extra = { version = "0.9.4", features = ["typed-header"] }
 base64 = "0.22.1"
