--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build_image:
   - i=0; while [ "$i" -lt 12 ]; do docker info && break; sleep 5; i=$(( i + 1 )) ; done
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
-  - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH ./server/Dockerfile
+  - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH ./server/
   - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH
   only:
   - main
