--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,14 +9,14 @@ publish = false
 
 [dependencies]
 argon2 = "0.5.3"
-axum = { version = "0.7" }
+axum = { version = "0.7", features = ["macros"] }
 axum-extra = { version = "0.9.4", features = ["typed-header"] }
 base64 = "0.22.1"
 chrono = { version = "0.4.38", features = ["serde", "clock"] }
 dotenvy = { version = "0.15" }
 jsonwebtoken = "9.3.0"
-lettre = "0.11.9"
 rand = "0.8.5"
+reqwest = { version = "0.12.8", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 sqlx = { version = "0.8.2", features = [
