--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,7 +16,10 @@ chrono = { version = "0.4.38", features = ["serde", "clock"] }
 dotenvy = { version = "0.15" }
 jsonwebtoken = "9.3.0"
 rand = "0.8.5"
-reqwest = { version = "0.12.8", features = ["json"] }
+reqwest = { version = "0.12.8", features = [
+    "json",
+    "rustls-tls",
+], default-features = false }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 sqlx = { version = "0.8.2", features = [
