--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - database_bridge
     depends_on:
       - postgres
-  database:
+  postgres:
     image: postgres
     restart: always
     ports:
