--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@solid-primitives/event-listener": "^2.3.3",
     "@solid-primitives/i18n": "^2.1.1",
     "@solid-primitives/utils": "^6.2.3",
+    "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.10",
     "@types/bun": "^1.1.13",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
